[build-system]
requires = ["setuptools", "wheel"]

[project]
authors = [
  {email = "cody.j.b.scott@gmail.com", name = "Cody Scott"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "beautifulsoup4",
  "click",
  "csscompressor",
  "feedwerk",
  "Flask",
  "Flask-FlatPages",
  "Frozen-Flask",
  "htmlmin",
  "jsmin",
  "Pygments",
]
description = "Write Markdown and Jinja2 templates to create a website"
maintainers = [
  {name = "Cody Scott", email = "cody.j.b.scott@gmail.com"},
]
name = "htmd"
readme = "README.md"
requires-python = ">=3.11"
version = "4.0.0"

[project.scripts]
htmd = "htmd.cli:cli"

[project.urls]
Changelog = "https://github.com/siecje/htmd/blob/main/CHANGELOG.md"
Documentation = "https://github.com/siecje/htmd"
Homepage = "https://github.com/siecje/htmd"
Issues = "https://github.com/siecje/htmd/issues"
Repository = "https://github.com/siecje/htmd.git"

[tool.ruff.lint]
ignore = [
  "D100", "D101", "D103", "D104",  "D203", "D211", "D212", "D213",
  "INP001",
  "RET504",
  "S101",
  "UP015",
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-third-party = ["htmd"]
lines-after-imports = 2
order-by-type = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.per-file-ignores]
"tests/test_build.py" = ["I001"]
"tests/test_verify.py" = ["I001"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["htmd"]

[tool.setuptools.package-data]
htmd = [
  "example_site/config.toml",
  "example_site/pages/*.html",
  "example_site/posts/*.md",
  "example_site/static/*.css",
  "example_site/templates/*.html",
]
