[build-system]
requires = ["setuptools"]

[project]
authors = [
  {email = "cody.j.b.scott@gmail.com", name = "Cody Scott"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "beautifulsoup4",
  "click",
  "cryptography",
  "csscompressor",
  "feedwerk",
  "Flask",
  "Flask-FlatPages",
  "Frozen-Flask",
  "htmlmin2",
  "jsmin",
  "Pygments",
  "watchdog",
]
description = "Write Markdown and Jinja2 templates to create a website"
maintainers = [
  {name = "Cody Scott", email = "cody.j.b.scott@gmail.com"},
]
name = "htmd"
readme = "README.md"
requires-python = ">=3.13"
version = "6.1.0"

[project.optional-dependencies]
dev = [
  "coverage",
  "mypy",
  "pytest",
  "PyYAML",
  "requests",
  "ruff",
  "types-Pygments",
  "types-PyYAML",
  "types-beautifulsoup4",
  "types-requests",
]

[project.scripts]
htmd = "htmd.cli:cli"

[project.urls]
Changelog = "https://github.com/siecje/htmd/blob/main/CHANGELOG.md"
Documentation = "https://github.com/siecje/htmd"
Homepage = "https://github.com/siecje/htmd"
Issues = "https://github.com/siecje/htmd/issues"
Repository = "https://github.com/siecje/htmd.git"

[tool.coverage.run]
branch = true
omit = [
  "/tmp/*",
  "/private/*",
]

[tool.ruff]
exclude = ["typehints"]
src = [".", "tests"]

[tool.ruff.lint]
ignore = [
  "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D203", "D212",
  "RET504", # Easier to debug
  "S101",   # Used for typehints
  "TID252", # Parent package can be renamed without changing import
  "UP015",  # Explicit is better than implicit.
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-third-party = ["htmd"]
lines-after-imports = 2
order-by-type = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["htmd", "htmd.cli"]

[tool.setuptools.package-data]
htmd = [
  "example_site/config.toml",
  "example_site/pages/*.html",
  "example_site/posts/*.md",
  "example_site/static/*.css",
  "example_site/static/password-protect.js",
  "example_site/static/favicon.svg",
  "example_site/templates/*.html",
]
