[metadata]
name = htmd
version = 2.0.0
author = Cody Scott
author_email = cody.j.b.scott@gmail.com
description = Write Markdown and Jinja2 templates to create a website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/siecje/htmd
project_urls =
    Bug Tracker = https://github.com/siecje/htmd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10
packages = find:
install_requires= 
  beautifulsoup4
  feedwerk
  Flask
  Flask-FlatPages
  Frozen-Flask
  Pygments
  click
  htmlmin
  jsmin
  csscompressor

[options.entry_points]
console_scripts =
    htmd=htmd.cli:cli

[options.package_data]
# Include everything in example_site directory
htmd.example_site.pages = *.html
htmd.example_site.posts = *.md
htmd.example_site.static = *.css
htmd.example_site.templates = *.html
